# PIDAIJ

./: tabele.odt
Project/: display_results.py  pyproject.toml
Project/CalculationAPI/: db.sqlite3  manage.py
Project/CalculationAPI/CalculationAPI/: asgi.py  settings.py  urls.py  wsgi.py
Project/CalculationAPI/MatrixCalculations/: comprehension.py  generator.py  multiprocess.py  sequential.py
Project/CalculationAPI/calculation_module/: apps.py  views.py
Project/calculation/: main.py  sequential.py
api/: pyproject.toml
api/web_project/: db.sqlite3
api/web_project/student/: models.py  serializers.py  urls.py  views.py
api/web_project/student/migrations/: 0001_initial.py
api/web_project/web_project/: settings.py  urls.py
v2/: number_gen.py  number_gen_comp.py  number_gen_iter.py  number_gen_pool.py
