[tool.poetry]
name = "api"
version = "0.1.0"
description = "api written in django"
authors = ["Milena Vujicic <vujicic_milena@uns.ac.rs>"]

[tool.poetry.dependencies]
python = "^3.8"
djangorestframework = "^3.12.2"
Django = "^3.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
